--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -15,6 +15,11 @@
   
 }
 
+.header {
+  color: var(--primary-colour);
+}
+
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -61,13 +66,7 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #dcdcdc
 }
 
 a {
