--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -19,6 +19,13 @@
   color: var(--primary-colour);
 }
 
+.main-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
