--- a/client/(components)/(css)/loginForm.css
+++ b/client/(components)/(css)/loginForm.css
@@ -9,6 +9,7 @@
   height: 25rem;
   border: 1px solid var(--accent-colour);
   border-radius: 10px;
+  width: 20rem;
 }
 
 .input-container {
@@ -17,6 +18,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   height: 100%;
+  align-items: center;
 }
 
 input {
