--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -34,6 +34,8 @@
   border-radius: 5px;
   border: 1px solid var(--primary-colour);
   transition: all 1s ease-in-out;
+  width: 100%;
+  background-color: var(--secondary-colour);
 }
 
 .btn-1:hover {
