--- a/client/(components)/(css)/dashboard.css
+++ b/client/(components)/(css)/dashboard.css
@@ -32,3 +32,16 @@
   margin-top: 1rem;
   border-radius: 10px;
 }
+
+.header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.header-container.btn-plus {
+  display: flex;
+  justify-self: flex-end;
+  align-self: flex-end;
+}
