feat:redesign buttons

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -33,16 +33,31 @@
   height: 2.5rem;
   border-radius: 5px;
   border: 1px solid var(--primary-colour);
-  transition: all 1s ease-in-out;
+  transition: all .3s ease-in-out;
   width: 100%;
   background-color: var(--secondary-colour);
 }
 
 .btn-1:hover {
-  background-color: var(--primary-colour);
+  background-color: var(--accent-colour);
   color: var(--background-colour);
   border: 1px solid var(--background-colour);
   border-radius: 5rem;
+}
+
+.btn-2{
+  color: var(--text-colour);
+  font-weight: 700;
+  height: 2.5rem;
+  border-radius: 5px;
+  border: 1px solid #29615a;
+  width: 100%;
+  background-color: transparent;
+}
+
+.btn-2:hover {
+  background-color: rgb(247, 238, 238);
+  border: 1px solid var(--accent-colour);
 }
 
 .btn-plus {
@@ -56,10 +71,30 @@
 }
 
 .btn-plus:hover {
-  background-color: var(--primary-colour);
+  background-color: var(--accent-colour);
   color: var(--background-colour);
   border: 2px solid var(--background-colour);
-  transition: ease-in-out 1s;
+  transition: ease-in-out .3s;
+}
+
+.btn-submit {
+  color: var(--text-colour);
+  width: 100%;
+  font-weight: 700;
+  height: 2.5rem;
+  border-radius: 5px;
+  border: none;
+  text-align: center;
+  background-color: var(--secondary-colour);
+  transition: 0.5s;
+}
+
+.btn-submit:hover {
+  color: var(--accent-color);
+  background-color: white;
+  border:1px solid var(--secondary-colour);
+  transition: 0.5s;
+  border-radius: 10px;
 }
 
 
