--- a/client/(components)/(css)/dashboard.css
+++ b/client/(components)/(css)/dashboard.css
@@ -68,3 +68,21 @@
   min-height: 50%;
   margin-top: 2rem;
 }
+
+@media screen and (max-width: 850px) {
+  .dashboard-body {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: auto;
+  }
+  .applications-container {
+    width: 100%;
+  }
+
+  .container {
+    width: 80%;
+    margin: 2rem;
+    border-top: 2px solid var(--accent-colour);
+  }
+}
