--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -20,11 +20,12 @@
   font-weight: 800;
 }
 
-.main-body {
+.main-body, .welcome.details {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 2rem;
 }
 
 .btn-1 {
