feat:added dark mode

--- a/client/(components)/(css)/loginForm.css
+++ b/client/(components)/(css)/loginForm.css
@@ -10,6 +10,7 @@
   border: 1px solid var(--accent-colour);
   border-radius: 10px;
   width: 20rem;
+  color: var(--text-colour);
 }
 
 .input-container {
