--- a/client/(components)/(css)/dashboard.css
+++ b/client/(components)/(css)/dashboard.css
@@ -10,8 +10,12 @@
   text-align: center;
 }
 
-.container {
+.container, .container-main {
   width: 25%;
+  margin-top: 2rem;
+}
+.container-main {
+  margin: 2rem auto;
 }
 
 .applications-container {
@@ -81,8 +85,11 @@
   }
 
   .container {
-    width: 80%;
+    width: 100%;
     margin: 2rem;
     border-top: 2px solid var(--accent-colour);
+  }
+  .container-main {
+    width: 80%;
   }
 }
