--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -4,6 +4,7 @@
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --main-background: #dadada;
   --primary-colour: #33475b; /* headers, primary buttons, and important elements */
   --secondary-colour: #7ea3af; /* buttons, highlights, and call-to-action elements */
   --background-colour: #f0f0f0;  /* background of cards, forms, and sections */
@@ -12,11 +13,34 @@
   --success-colour: #4caf50;
   --warning-colour: #ff9800;
   --error-colour: #f44336;
-  
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-background: #181818;
+    --primary-colour: #1e1e1e; /* headers, primary buttons, and important elements */
+    --secondary-colour: #444444; /* buttons, highlights, and call-to-action elements */
+    --background-colour: #575757; /* background of cards, forms, and sections */
+    --text-colour: #ffffff; /* content, headings, and descriptions */
+    --accent-colour: #64ffda; /* used sparingly for accents like icons, borders, and focus states */
+    --success-colour: #4caf50;
+    --warning-colour: #ff9800;
+    --error-colour: #f44336;
+  }
+}
+
+body {
+  background: var(--main-background);
+  color: var(--text-colour);
+}
+
+.nav {
+  background-color: var(--secondary-colour);
+}
+
+
 .header {
-  color: var(--primary-colour);
+  color: var(--text-colour);
   font-weight: 800;
 }
 
@@ -99,38 +123,7 @@
 }
 
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
 
 * {
   box-sizing: border-box;
@@ -144,9 +137,6 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  background: #dcdcdc
-}
 
 a {
   color: inherit;
